--- a/Notebook/FE and EDA on data.ipynb
+++ b/Notebook/FE and EDA on data.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"/config/workspace/Data/HEART.csv\")"
+    "df=pd.read_csv(\"C:\\\\Users\\\\tusha\\\\OneDrive\\\\Desktop\\\\heart\\\\HEART_DISEASE_PREDICTION\\\\Data\\\\HEART.csv\")"
    ]
   },
   {
@@ -480,7 +480,7 @@
       "text/plain": [
        "array([63, 37, 41, 56, 57, 44, 52, 54, 48, 49, 64, 58, 50, 66, 43, 69, 59,\n",
        "       42, 61, 40, 71, 51, 65, 53, 46, 45, 39, 47, 62, 34, 35, 29, 55, 60,\n",
-       "       67, 68, 74, 76, 70, 38, 77])"
+       "       67, 68, 74, 76, 70, 38, 77], dtype=int64)"
       ]
      },
      "execution_count": 8,
@@ -500,7 +500,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0])"
+       "array([1, 0], dtype=int64)"
       ]
      },
      "execution_count": 9,
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 2, 1, 0])"
+       "array([3, 2, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -553,10 +553,10 @@
        "array([145, 130, 120, 140, 172, 150, 110, 135, 160, 105, 125, 142, 155,\n",
        "       104, 138, 128, 108, 134, 122, 115, 118, 100, 124,  94, 112, 102,\n",
        "       152, 101, 132, 148, 178, 129, 180, 136, 126, 106, 156, 170, 146,\n",
-       "       117, 200, 165, 174, 192, 144, 123, 154, 114, 164])"
+       "       117, 200, 165, 174, 192, 144, 123, 154, 114, 164], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +584,10 @@
        "       286, 229, 284, 224, 206, 167, 230, 335, 276, 353, 225, 330, 290,\n",
        "       172, 305, 188, 282, 185, 326, 274, 164, 307, 249, 341, 407, 217,\n",
        "       174, 281, 289, 322, 299, 300, 293, 184, 409, 259, 200, 327, 237,\n",
-       "       218, 319, 166, 311, 169, 187, 176, 241, 131])"
+       "       218, 319, 166, 311, 169, 187, 176, 241, 131], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0])"
+       "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2])"
+       "array([0, 1, 2], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,8 @@
        "       185, 159, 130, 190, 132, 147, 154, 202, 166, 164, 184, 122, 169,\n",
        "       138, 111, 145, 194, 131, 133, 155, 167, 192, 121,  96, 126, 105,\n",
        "       181, 116, 108, 129, 120, 112, 128, 109, 113,  99, 177, 141, 136,\n",
-       "        97, 127, 103, 124,  88, 195, 106,  95, 117,  71, 118, 134,  90])"
+       "        97, 127, 103, 124,  88, 195, 106,  95, 117,  71, 118, 134,  90],\n",
+       "      dtype=int64)"
       ]
      },
      "execution_count": 15,
@@ -695,7 +696,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1])"
+       "array([0, 1], dtype=int64)"
       ]
      },
      "execution_count": 16,
@@ -749,7 +750,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 1])"
+       "array([0, 2, 1], dtype=int64)"
       ]
      },
      "execution_count": 18,
@@ -782,7 +783,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 1, 3, 4])"
+       "array([0, 2, 1, 3, 4], dtype=int64)"
       ]
      },
      "execution_count": 19,
@@ -824,7 +825,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 0])"
+       "array([1, 2, 3, 0], dtype=int64)"
       ]
      },
      "execution_count": 20,
@@ -852,6 +853,41 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -870,7 +906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4,
   "vscode": {
